<project xmlns="http://maven.apache.org/POM/4.0.0"
  xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0
                      http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>
    <groupId>com.netflix.hystrix.download</groupId>
    <artifactId>hystrix-download</artifactId>
   <version>1.0-SNAPSHOT</version>
    <packaging>war</packaging>
    <name>Simple POM to download hystrix-core and dependencies</name>
    <url>http://github.com/Netflix/Hystrix</url>
    <dependencies>
        <dependency>
                <groupId>javax.servlet</groupId>
                <artifactId>servlet-api</artifactId>
                <version>2.5</version>
                <scope>provided</scope>
        </dependency>
        <dependency>
                <groupId>org.apache.httpcomponents</groupId>
                <artifactId>httpclient</artifactId>
                <version>4.2.1</version>
        </dependency>
        <dependency>
                <groupId>log4j</groupId>
                <artifactId>log4j</artifactId>
                <version>1.2.17</version>
        </dependency>
        <dependency>
                <groupId>org.slf4j</groupId>
                <artifactId>slf4j-log4j12</artifactId>
                <version>1.7.0</version>
        </dependency>
    </dependencies>
    <build>
        <plugins>
                        <plugin>
                                <groupId>org.apache.maven.plugins</groupId>
                                <artifactId>maven-war-plugin</artifactId>
                                <version>2.3</version>
                                <configuration>
                                        <failOnMissingWebXml>false</failOnMissingWebXml>
 
                                        <webResources>
                                                <resource>
                                                        <directory>src/main/webapp/</directory>
                                                        <!-- enable filtering -->
                                                        <filtering>true</filtering>
                                                </resource>
                                        </webResources>
                                        <archive>
                                                <manifest>
                                                        <mainClass>com.ing.diba.rsib.RsibServletContainerInitializer</mainClass>
                                                        <addDefaultImplementationEntries>true</addDefaultImplementationEntries>
                                                </manifest>
                                        </archive>
                                </configuration>
                        </plugin>
                        <plugin>
                                <groupId>org.eclipse.jetty</groupId>
                                <artifactId>jetty-maven-plugin</artifactId>
                                <version>9.1.1.v20140108</version>
                                <configuration>
					<webApp>
                                                <contextPath>/hystrix-dashboard</contextPath>
                                        </webApp>

                                        <jvmArgs>-Xmx512m -XX:MaxPermSize=128m</jvmArgs>
                                        <scanIntervalSeconds>1</scanIntervalSeconds>
 
                                        <httpConnector>
                                                <port>7979</port>
                                        </httpConnector>
 
                                        <contextXml>src/test/jetty/jetty.xml</contextXml>
                                </configuration>
                        </plugin>
                        <plugin>
                                <artifactId>maven-compiler-plugin</artifactId>
                                <version>3.1</version>
                                <executions>
                                        <execution>
                                                <id>default-testCompile</id>
                                                <phase>test-compile</phase>
                                                <goals>
                                                        <goal>testCompile</goal>
                                                </goals>
                                                <configuration>
                                                        <source>1.7</source>
                                                        <target>1.7</target>
                                                        <optimize>true</optimize>
                                                        <encoding>${project.build.sourceEncoding}</encoding>
                                                </configuration>
                                        </execution>
                                        <execution>
                                                <id>default-compile</id>
                                                <phase>compile</phase>
                                                <goals>
                                                        <goal>compile</goal>
                                                </goals>
                                                <configuration>
                                                        <source>1.7</source>
                                                        <target>1.7</target>
                                                        <optimize>true</optimize>
                                                        <encoding>${project.build.sourceEncoding}</encoding>
                                                </configuration>
                                        </execution>
                                </executions>
                                <inherited>true</inherited>
                                <configuration>
                                        <source>1.7</source>
                                        <target>1.7</target>
                                        <optimize>true</optimize>
                                        <encoding>${project.build.sourceEncoding}</encoding>
                                </configuration>
                        </plugin>
        </plugins>
    </build>
</project>
 
